cleanup and adapt StudentController.getStudents() to use List.of()